--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SQLConnection": "Server=tcp:appserver400076.database.windows.net,1433;Initial Catalog=appDb;Persist Security Info=False;User ID=sqlAdmin;Password=Admin@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
